examples/test/testpolicy6533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6533
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key34: value47
      key0: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value25
      podSelector:
        matchLabels:
          key23: value41
          key35: value42
          key12: value11
